syntax = "proto3";

package notification;

option go_package = "notify/internal/domain/proto";

service NotificationService {
  rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse);
  rpc GetNotificationStatus (GetNotificationStatusRequest) returns (GetNotificationStatusResponse);
}

message SendNotificationRequest {
  string type = 1;
  bytes payload = 2;
}

message SendNotificationResponse {
  string id = 1;
}

message GetNotificationStatusRequest {
  string id = 1;
}

message GetNotificationStatusResponse {
  string id = 1;
  string status = 2;
}
